versioned_docs/version-2.9.0/Enums/TrackSourceTypes.mdx
---
id: enums-TrackSourceTypes
title: "Enum: TrackSourceTypes"
description: TrackSourceTypes enumerations
slug: /enums/TrackSourceTypes
sidebar_label: TrackSourceTypes
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# TrackSourceTypes

> Represents the supported track source types given by LavaLink or Nodelink.

<Tabs>
  <TabItem value="members" label="Enumeration Members" default>
  | Member                      | Value          |
  |:----------------------------|:---------------|
  | [AppleMusic](#appleMusic) | `"appleMusic"` |
  | [Bandcamp](#bandcamp)     | `"bandcamp"`   |
  | [Deezer](#deezer)         | `"deezer"`     |
  | [Jiosaavn](#jiosaavn)     | `"jiosaavn"`   |
  | [Qobuz](#qobuz)           | `"qobuz"`      |
  | [SoundCloud](#soundcloud) | `"soundcloud"` |
  | [Spotify](#spotify)       | `"spotify"`    |
  | [Tidal](#tidal)           | `"tidal"`      |
  | [VKMusic](#vkmusic)       | `"vkmusic"`    |
  | [YouTube](#youtube)       | `"youtube"`    |
  </TabItem>
</Tabs>

### AppleMusic {#appleMusic}

> <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### Bandcamp {#bandcamp}

---

### Deezer {#deezer}

> <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### Jiosaavn {#jiosaavn}

>  <span className="warning badge">Requires the [JioSaavn plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/appujet/jiosaavn-plugin)</span>

---

### SoundCloud {#soundcloud}

---

### Spotify {#spotify}

> <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### Tidal {#tidal}

>  <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### VKMusic {#vkmusic}

>  <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### YouTube {#youtube}

>  <span className="warning badge">Requires the [YouTube-Source plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/lavalink-devs/youtube-source)</span>