versioned_docs/version-2.9.1/Enums/TrackSourceTypes.mdx
---
id: enums-TrackSourceTypes
title: "Enum: TrackSourceTypes"
description: TrackSourceTypes enumerations
slug: /enums/TrackSourceTypes
sidebar_label: TrackSourceTypes
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# TrackSourceTypes

> Represents the supported track source types given by LavaLink or Nodelink.

<Tabs>
  <TabItem value="members" label="Enumeration Members" default>
  | Member                      | Value          |
  |:----------------------------|:---------------|
  | [AppleMusic](#appleMusic) | `"AppleMusic"` |
  | [Audius](#audius)         | `"Audius"`     |
  | [Bandcamp](#bandcamp)     | `"Bandcamp"`   |
  | [Deezer](#deezer)         | `"Deezer"`     |
  | [Jiosaavn](#jiosaavn)     | `"Jiosaavn"`   |
  | [Qobuz](#qobuz)           | `"Qobuz"`      |
  | [SoundCloud](#soundcloud) | `"Soundcloud"` |
  | [Spotify](#spotify)       | `"Spotify"`    |
  | [Tidal](#tidal)           | `"Tidal"`      |
  | [VKMusic](#vkmusic)       | `"VKMusic"`    |
  | [YouTube](#youtube)       | `"Youtube"`    |
  | [Pornhub](#pornhub)       | `"Pornhub"`    |
  | [TikTok](#tiktok) | `"TikTok"` |
  | [Flowertts](#flowertts) | `"Flowertts"` |
  | [Ocremix](#ocremix) | `"Ocremix"` |
  | [Mixcloud](#mixcloud) | `"Mixcloud"` |
  | [Soundgasm](#soundgasm) | `"Soundgasm"` |
  | [Reddit](#reddit) | `"Reddit"` |
  | [Clypit](#Clypit) | `"Clypit"` |
  | [Http](#http) | `"Http"` |
  | [Tts](#tts) | `"Tts"` |
  </TabItem>
</Tabs>

### AppleMusic {#appleMusic}

> <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### Audius {#audius}

> <span className="warning badge">Requires the [Audius plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/bednie/audius-plugin)</span>

---

### Bandcamp {#bandcamp}

---

### Deezer {#deezer}

> <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### Jiosaavn {#jiosaavn}

>  <span className="warning badge">Requires the [JioSaavn plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/appujet/jiosaavn-plugin)</span>

---

### SoundCloud {#soundcloud}

---

### Spotify {#spotify}

> <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### Tidal {#tidal}

>  <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### VKMusic {#vkmusic}

>  <span className="warning badge">Requires the [LavaSrc plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/topi314/LavaSrc)</span>

---

### YouTube {#youtube}

>  <span className="warning badge">Requires the [YouTube-Source plugin <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/lavalink-devs/youtube-source)</span>

---

### Pornhub {#pornhub}

---

### TikTok {#tiktok}

---

### Flowertts {#flowertts}

---

### Ocremix {#ocremix}

---

### Mixcloud {#mixcloud}

---

### Soundgasm {#soundgasm}

---

### Reddit {#reddit}

---

### Clypit {#clypit}

---

### Http {#http}

---

### Tts {#tts}